--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "author": "Johanthan Pylant",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20"
   }
 }
